--- a/ppa-assignment-4-starter/Panel1.fxml
+++ b/ppa-assignment-4-starter/Panel1.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -21,10 +23,36 @@
                   <Label layoutX="474.0" layoutY="9.0" prefHeight="17.0" prefWidth="20.0" text="To:" />
                </children>
             </Pane>
-            <Pane prefHeight="348.0" prefWidth="600.0" style="-fx-border-color: grey;" />
+            <Pane prefHeight="348.0" prefWidth="600.0" style="-fx-border-color: grey; -fx-background-color: white;">
+               <children>
+                  <Label alignment="TOP_CENTER" layoutX="10.0" layoutY="88.0" prefHeight="31.0" prefWidth="583.0" text="INSTRUCTIONS: ">
+                     <font>
+                        <Font name="MS Outlook" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="9.0" layoutY="14.0" prefHeight="55.0" prefWidth="583.0" text="Welcome to the Covid Data Loader!">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="9.0" layoutY="119.0" prefHeight="46.0" prefWidth="583.0" text="Use the dates at the top right of your screen to choose the range for the dates you want" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="9.0" layoutY="165.0" prefHeight="46.0" prefWidth="583.0" text="Once you have chosen dates, you can then use the buttons on the bottom left and right to navigate." />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="211.0" prefHeight="39.0" prefWidth="583.0" text="These buttons are disabled until dates are within a valid range are chosen" />
+                  <ImageView fitHeight="79.0" fitWidth="124.0" layoutX="32.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../Downloads/covid2.jpg" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="dateProcess" layoutX="186.0" layoutY="301.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="229.0" text="Process Dates Entered" onAction="#ProcessDates" />
+                  <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="250.0" prefHeight="39.0" prefWidth="583.0" textFill="#ff0707">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </children></Pane>
             <Pane depthTest="DISABLE" prefHeight="36.0" prefWidth="600.0">
                <children>
-                  <Button fx:id="prevButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="59.0" text="&lt;---" textAlignment="RIGHT">
+                  <Button fx:id="prevButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" onAction="#getValidity" prefHeight="18.0" prefWidth="59.0" text="&lt;---" textAlignment="RIGHT">
                      <font>
                         <Font size="8.0" />
                      </font>
