--- a/ppa-assignment-4-starter/Panel3.fxml
+++ b/ppa-assignment-4-starter/Panel3.fxml
@@ -8,15 +8,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="400.0" maxWidth="600.0" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StatisticsPanel">
+<Pane maxHeight="426.0" maxWidth="647.0" minHeight="505.0" minWidth="730.0" prefHeight="505.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StatisticsPanel">
    <children>
-      <VBox layoutY="-1.0" prefHeight="400.0" prefWidth="600.0">
+      <VBox prefHeight="505.0" prefWidth="730.0">
          <children>
-            <Pane prefHeight="357.0" prefWidth="600.0" style="-fx-border-color: grey;">
+            <Pane prefHeight="470.0" prefWidth="691.0" style="-fx-border-color: grey;">
                <children>
-                  <BorderPane prefHeight="357.0" prefWidth="600.0">
+                  <BorderPane prefHeight="470.0" prefWidth="730.0">
                      <left>
-                        <Button mnemonicParsing="false" prefHeight="330.0" prefWidth="102.0" text="🞀" BorderPane.alignment="CENTER">
+                        <Button mnemonicParsing="false" onAction="#prevData" prefHeight="330.0" prefWidth="102.0" text="🞀" BorderPane.alignment="CENTER">
                            <font>
                               <Font size="55.0" />
                            </font>
@@ -26,7 +26,7 @@
                         </Button>
                      </left>
                      <right>
-                        <Button mnemonicParsing="false" prefHeight="357.0" prefWidth="103.0" text="🞂" BorderPane.alignment="CENTER">
+                        <Button mnemonicParsing="false" onAction="#nextData" prefHeight="357.0" prefWidth="103.0" text="🞂" BorderPane.alignment="CENTER">
                            <font>
                               <Font size="55.0" />
                            </font>
@@ -36,14 +36,14 @@
                         </Button>
                      </right>
                      <center>
-                        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                        <VBox prefHeight="505.0" prefWidth="457.0" BorderPane.alignment="CENTER">
                            <children>
-                              <Label alignment="CENTER" prefHeight="321.0" prefWidth="343.0" text="Statistic Name" textAlignment="CENTER">
+                              <Label fx:id="Statistic_Name" alignment="CENTER" prefHeight="325.0" prefWidth="483.0" text="Click Next to Start" textAlignment="CENTER" wrapText="true">
                                  <font>
                                     <Font size="48.0" />
                                  </font>
                               </Label>
-                              <Label alignment="CENTER" prefHeight="321.0" prefWidth="343.0" text="Statistic">
+                              <Label fx:id="Statistic" alignment="CENTER" prefHeight="343.0" prefWidth="470.0" text="Statistic" wrapText="true">
                                  <font>
                                     <Font size="36.0" />
                                  </font>
@@ -55,12 +55,12 @@
                </children></Pane>
             <Pane depthTest="DISABLE" prefHeight="36.0" prefWidth="600.0">
                <children>
-                  <Button fx:id="prevButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="59.0" text="&lt;---" textAlignment="RIGHT" onAction="#switchToBorough">
+                  <Button fx:id="prevButton" layoutX="14.0" layoutY="9.0" mnemonicParsing="false" onAction="#switchToBorough" prefHeight="18.0" prefWidth="59.0" text="&lt;---" textAlignment="RIGHT">
                      <font>
                         <Font size="8.0" />
                      </font>
                   </Button>
-                  <Button fx:id="nextButton" layoutX="533.0" layoutY="5.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="59.0" text="---&gt;" textAlignment="RIGHT">
+                  <Button fx:id="nextButton" layoutX="657.0" layoutY="9.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="59.0" text="---&gt;" textAlignment="RIGHT">
                      <font>
                         <Font size="8.0" />
                      </font>
