--- a/ppa-assignment-4-starter/Panel2.fxml
+++ b/ppa-assignment-4-starter/Panel2.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
@@ -212,6 +213,7 @@
                   <Circle fx:id="Haringey" fill="#1f93ff40" layoutX="346.0" layoutY="104.0" onMouseClicked="#switchToSpecificBorough" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                   <Circle fx:id="Waltham_Forest" fill="#1f93ff40" layoutX="420.0" layoutY="104.0" onMouseClicked="#switchToSpecificBorough" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
                   <Circle fx:id="Enfield" fill="#1f93ff30" layoutX="383.0" layoutY="38.0" onMouseClicked="#switchToSpecificBorough" radius="33.0" stroke="BLACK" strokeType="INSIDE" />
+                  <RadioButton fx:id="deathRates" layoutX="28.0" layoutY="23.0" mnemonicParsing="false" onAction="#changeCircleColour" prefHeight="30.0" prefWidth="132.0" text="Show Death Rates" />
                </children></Pane>
             <Pane depthTest="DISABLE" prefHeight="53.0" prefWidth="730.0">
                <children>
